Fix disappearing transferlist list when zooming in the browser
When the page is zoomed in the browser, the transferlist doesn't fit
in the page and is moved below the left column, disappearing completely.

Allow elements to overlap the handle to prevent this from happening.

The error message is moved in the status bar since it's wrongly placed
because of the overlap.

Closes #603.

--- a/src/webui/www/public/css/style.css
+++ b/src/webui/www/public/css/style.css
@@ -370,3 +370,16 @@ ul.filterList li:hover a {
 .torrentTable thead tr {
 	background-color: #eee;
 }
+
+/*
+ * Workaround to prevent the transfer list from
+ * disappearing when zooming in the browser. 
+ */
+#filtersColumn_handle {
+	margin-left: -1px;
+}
+
+#error_div {
+	float: left;
+	font-size: 14px;
+}
